Added Diploma education entry

--- a/index.html
+++ b/index.html
@@ -104,15 +104,21 @@
             </div>
             <div class="education-card">
                 <i class="fas fa-book-reader"></i>
+                <h3>Diploma in Electronics and Tele-Communication Engineering</h3>
+                <p><strong>2019-2022</strong></p>
+                <p>Ramakrishna Mission Shilpamandira, Belur, Howrah (WBSCTE)</p>
+            </div>
+            <div class="education-card">
+                <i class="fas fa-book-reader"></i>
                 <h3>Higher Secondary</h3>
                 <p><strong>2019</strong></p>
-                <p>Durga Charan Rakshit Banga Vidyalaya(WBCHSE)</p>
+                <p>Durga Charan Rakshit Banga Vidyalaya (WBCHSE)</p>
             </div>
             <div class="education-card">
                 <i class="fas fa-school"></i>
                 <h3>Secondary</h3>
                 <p><strong>2017</strong></p>
-                <p>Chandannagore banga Vidyalaya (WBBSE)</p>
+                <p>Chandannagore Banga Vidyalaya (WBBSE)</p>
             </div>
         </div>
     </section>
