--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
             <div class="project-card">
                 <h3>ToDo App</h3>
                 <p>I've created ToDo App . A to-do app is a digital tool that allows users to create, manage, and prioritize tasks or reminders to enhance productivity and organization.</p>
-                <a href=" github link " class="btn btn-project">View Project</a>
+                <a href="https://github.com/palas-c/palash-devfolio.git" class="btn btn-project">View Project</a>
             </div>
             <div class="project-card">
                 <h3>Basic Calculator</h3>
                 <p>I've created Basic calculator . A basic calculator is a simple electronic or software tool that performs fundamental arithmetic operations such as addition, subtraction, multiplication, and division.</p>
-                <a href="github link" class="btn btn-project">View Project</a>
+                <a href="https://github.com/palas-c/palash-devfolio.git" class="btn btn-project">View Project</a>
             </div>
             <div class="project-card">
                 <h3>Project Title 3</h3>
