--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="project-card">
                 <h3>Basic Calculator</h3>
                 <p>I've created Basic calculator . A basic calculator is a simple electronic or software tool that performs fundamental arithmetic operations such as addition, subtraction, multiplication, and division.</p>
-                <a href="https://github.com/palas-c/palash-devfolio.git" class="btn btn-project">View Project</a>
+                <a href="https://github.com/palas-c/Calculator.git" class="btn btn-project">View Project</a>
             </div>
             <div class="project-card">
                 <h3>Project Title 3</h3>
