Updated href link in index.html

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="project-card">
                 <h3>ToDo App</h3>
                 <p>I've created ToDo App . A to-do app is a digital tool that allows users to create, manage, and prioritize tasks or reminders to enhance productivity and organization.</p>
-                <a href="https://github.com/palas-c/palash-devfolio.git" class="btn btn-project">View Project</a>
+                <a href="https://github.com/palas-c/To-Do-App.git" class="btn btn-project">View Project</a>
             </div>
             <div class="project-card">
                 <h3>Basic Calculator</h3>
