Updated href link in index.html

--- a/index.html
+++ b/index.html
@@ -101,12 +101,14 @@
                 <h3>B.Tech in Computer Science Engineering</h3>
                 <p><strong>2023-2026</strong></p>
                 <p>Modern Institute of Engineering & Technology, Bandel (under MAKAUT)</p>
+                <a href="https://www.miet.ac.in/" class="btn btn-education">View College</a>
             </div>
             <div class="education-card">
                 <i class="fas fa-book-reader"></i>
                 <h3>Diploma in Electronics and Tele-Communication Engineering</h3>
                 <p><strong>2019-2022</strong></p>
                 <p>Ramakrishna Mission Shilpamandira, Belur, Howrah (WBSCTE)</p>
+                <a href="https://www.rkshm.org/" class="btn btn-education">View College</a>
             </div>
             <div class="education-card">
                 <i class="fas fa-book-reader"></i>
