Updated href link in index.html

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <h3>Diploma in Electronics and Tele-Communication Engineering</h3>
                 <p><strong>2019-2022</strong></p>
                 <p>Ramakrishna Mission Shilpamandira, Belur, Howrah (WBSCTE)</p>
-                <a href="https://www.rkshm.org/" class="btn btn-education">View College</a>
+                <a href="https://www.shilpamandira.org/home.html" class="btn btn-education">View College</a>
             </div>
             <div class="education-card">
                 <i class="fas fa-book-reader"></i>
